# type-repl

./: LICENSE  README.md  package.yaml  type-repl.cabal
app/: Main.hs
src/: Lambda.hs  LambdaParse.hs  LambdaTyping.hs  Unification.hs
src/Control/: SyntacticUnification.hs
src/Data/Lambda/: Simple.hs
src/Data/Lambda/Simple/: Parser.hs  Typing.hs
test/: LambdaParseTest.hs  LambdaTypingTest.hs  Spec.hs  UnificationTest.hs
test/Control/: SyntacticUnificationTest.hs
test/Data/Lambda/: SimpleTest.hs
test/Data/Lambda/Simple/: ParserTest.hs  TypingTest.hs
