name:                type-repl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kentahama/type-repl#readme
license:             BSD3
license-file:        LICENSE
author:              Kenta Hamanaka
maintainer:          kenta.hamanaka@gmail.com
copyright:           2017 kentahama
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable type-repl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , type-repl
  default-language:    Haskell2010

test-suite type-repl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , type-repl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kentahama/type-repl
